Kubernete1/files/objects/cm1-env-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cm1-env-pod
spec:
  containers:
    - name: test-container
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh", "-c", "env" ]
  restartPolicy: Never
