Kubernete1/files/objects/configMap-example1.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: configmap-ex1
data:
  appName: "ConfigMap Example"
  appVersion: v1
  logLevel: Debug
 
 ---
 
apiVersion: v1
kind: Pod
metadata:
  name: configmap-ex1-pod
  labels:
    app: configmap-ex1-pod
spec:
  containers:
    - name: test-container
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh", "-c", "env" ]
  restartPolicy: Never
