Kubernete1/files/objects/configmap1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-ex1-pod
  labels:
    app: configmap-ex1-pod
spec:
  containers:
    - name: test-container
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh", "-c", "env" ]
  restartPolicy: Never
