Kubernete1/files/objects/nginx-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx-pod
  replicas: 2
  template:  
    metadata:
      name: nginx-pod
      labels:
        app: nginx-pod
    spec:
      containers:
      - name: nginx
        image: nginx:stable
        ports:
        - name: nginx-http-port
          containerPort: 80
          protocol: TCP
