Kubernete1/files/objects/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx-pod
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - name: nginx-http-port
          containerPort: 80
          protocol: TCP
