Kubernete1/files/objects/secret1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret1-pod
spec:
  containers:
  - name: mycontainer
    image: k8s.gcr.io/busybox
    command: [ "/bin/sh", "-c", "env" ]
  restartPolicy: Never
