Kubernete1/files/objects/vol1-hostfile-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vol1-hostfile-pod
spec:
  containers:
  - image: alpine
    imagePullPolicy: IfNotPresent
    name: myvolumes-container

    command: ['sh', '-c', 'echo Container 1 is Running ; sleep 3600']

    volumeMounts:
      - mountPath: "/my-pv-path"
        name: vol1-hostfile-pvc-name

  volumes:
    - name: vol1-hostfile-pvc-name
      persistentVolumeClaim:
       claimName: vol1-hostfile-pvc
