Kubernete1/files/objects/svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxsvc-cluster
  labels:
    app: nginxsvc-cluster
spec:
  ports:
  - name: nginxsvc-cluster-port
    port: 8080
    targetPort: nginx-http-port
    protocol: TCP
  selector:
    app: nginx-pod
