Kubernete1/files/objects/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxsvc-nodeport
  labels:
    app: nginxsvc-nodeport
spec:
  type: NodePort
  ports:
  - name: nginxsvc-node-port
    nodePort: 30001
    port: 80
    targetPort: nginx-http-port
    protocol: TCP
  selector:
    app: nginx-pod
